--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Hello World!
     </h1>
 
-    <footer>Coded By by Charlotte Mellor</footer>
+    <footer>Coded by 
+        <a href="https://github.com/Mellor67">
+            Charlotte Mellor  
+        </a></footer> Hosted by <a href="https://app.netlify.com/start/repos">Netlify</a>
 </body>
 </html>
