Update footer with correct links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </h1>
 
     <footer>Coded by 
-        <a href="https://github.com/Mellor67">
+        <a href="https://github.com/Mellor67" target="_blank">
             Charlotte Mellor  
-        </a></footer> Hosted by <a href="https://app.netlify.com/start/repos">Netlify</a>
+        </a></footer> Hosted by <a href="https://app.netlify.com/start/repos" target="_blank">Github</a> and website<a href="https://app.netlify.com/start/repos" target="_blank"> hosted on Netlify</a>
 </body>
 </html>
