Wireframe and Form added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Weather</title>
 </head>
 <body>
+   <header>
+    <form>
+        <input type="search" placeholder="Find your city!" required>
+        <input type="submit" value="search"/>
     <h1>Hello World!
     </h1>
+    <main>
+        <p>
+            Tempreture 14 degrees 
+            Humidity 15 
+        </p>
+    </main>
 
     <footer>Coded by 
         <a href="https://github.com/Mellor67" target="_blank">
