--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,24 +16,24 @@
 <body>
     <div class="Main-Article">
    <header>
-    <form>
-        <input class="search" type="search" placeholder="Find your city!" required>
+    <form id="search-form">
+        <input id="search-input" class="search" type="search" placeholder="Find your city!" required>
         <input class="search-button" type="submit" value="search"/>
     </form>
    </header>
     <main>
       <div class="data">
             <div>
-            <h1 class="weather-city">London</h1>
+            <h1 class="weather-city" id="current-city">London</h1>
             <p class="weather-details">
-                    Wednesday 14:69, Scattered Clouds 
+                    <span id="current-date">Wednesday 14:69</span>, <span id="description">Scattered Clouds</span>
                     <br />
-                    Humidity: <strong>66%</strong>, Wind: <Strong>44 mph</Strong>
+                    Humidity: <strong><span id="hum">66%</span></strong>, Wind: <Strong><span id="wind">44</span> mph</Strong>
             </p>
             </div>
             <div class="weather-temp">
-                <div class="Temp-icon"> ⛅ </div> 
-                <div class="weather-temp-value"> 12 </div> 
+                <div class="Temp-icon" id="icon"></div> 
+                <div class="weather-temp-value" id="weather-temp-value"> 12 </div> 
                 <div class="weather-temp-unit">°C</div>
             </div>
         
@@ -42,5 +43,6 @@
 
     <footer> Coded by <a href="https://github.com/Mellor67" target="_blank">Charlotte Mellor  </a> Hosted by <a href="https://app.netlify.com/start/repos" target="_blank">Github</a> and website<a href="https://app.netlify.com/start/repos" target="_blank"> hosted on Netlify</a></footer>
     </div>
+    <script src="index.js"> </script>
     </body>
 </html>
